test/fixtures/compile/parameter/parameter.return.xy_in.ie.ks
func foobar(_ % val) {
	return val
}